[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-flowcheck"
version = "0.1.0"
description = "A lightweight runtime contract validation library for Python backends and data pipelines."
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "flask",
    "celery",
    "pydantic",
    "pytest",
    "ruff",
    "mypy",
    "uvicorn"
]